--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,12 +2,20 @@ name: Keep-Alive Bot
 
 on:
   schedule:
-    # Roda a cada 5 minutos (o mínimo permitido pelo GitHub)
-    - cron: '*/5 * * * *'
+    # Roda a cada 5 minutos
+    - cron: '*/7 * * * *'
 
 jobs:
-  ping-my-site:
+  ping-my-sites: # Mudei o nome do job para o plural, para ficar mais claro
     runs-on: ubuntu-latest
     steps:
-      - name: Ping the website URL to keep it alive
+      - name: Ping Agendamento Online
         run: curl -sS https://agendamento-online-barbearia-lucas-borges.onrender.com/ > /dev/null
+
+      # ----- ADIÇÃO NOVA -----
+      - name: Ping Controle Diario
+        run: curl -sS https://controle-diario-barbearia-lb.onrender.com/ > /dev/null
+
+      # ----- ADIÇÃO NOVA -----
+      - name: Ping Agendamento Interno
+        run: curl -sS https://agendamento-interno-barbearia-lb.onrender.com/ > /dev/null
