--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,4 @@ jobs:
       # ----- ADIÇÃO NOVA -----
       - name: Ping Agendamento Interno
         run: curl -sS https://agendamento-interno-barbearia-lb.onrender.com/ > /dev/null
+        #vai funcionar
